# apicultor

./: .gitignore  DoSegmentation.py  Dockerfile  FILES_DESC.md  Fill_DB.py  INSTALL.md  JsonMirFilesData.py  MANIFEST.in  MockRedPanalAPI_service.py  MusicEmotionMachine.py  OSC_MIR_Server.py  PLUGIN_SYSTEM.md  README.md  README_en.md  README_es.md  RandomSegmentation.py  Roadmap.md  SimpleStateMachine.py  Sonification.py  SoundSimilarity.py  TODO.md  __init__.py  cross_validation.py  descargar.py  docker.md  pyproject.toml  quality.py  requirements.md  requirements.txt  roadmap.md  run_MIR_analysis.py  run_docker_ws.sh  run_freesound_scripts.sh  run_mir_analysis.py  run_state_machine.sh  run_statemachine.sh  segmentar.py  setup.py  similaridades_sonoras.py  soundwork.sh
Docker/: Dockerfile
MIR/: extractTempo.py
MIR_State_Machine/: Composition.py  IMIRDB.py  SMComposition.py
MirDbApi/: IMirDbApi.py
apicultor/: DoSegmentation.py  Fill_DB.py  MusicEmotionMachine.py  RandomSegmentation.py  Sonification.py  SoundSimilarity.py  convert_to_ogg.py  cross_validation.py  mute_removal.py  quality.py  run_MIR_analysis.py  run_mir_analysis.py
bateria/: 1500.undefined
cloud_instrument/: AudioServer.py  CloudInstrument.py  CloudInstrument_modern.py  FINAL_SUCCESS_SUMMARY.md  INSTALL.md  MIRState.md  ModernOSCServer.py  OSCServer.py  OSC_SUCCESS.md  README.md  README_MODERN.md  README_es.md  REFACTOR_SUMMARY.md  __init__.py  apicultor_synth.scd  check-log.sh  clean_disk.sh  install_osc_dependencies.md  live_multiple_player_8voices.scd  live_start.scd  osc_server_and_multiple_player_8voices.scd  osc_server_and_player.scd  raspberry_pi_start_all.sh  run_osc_ui.sh  start.sh  start_all.sh  test_cloud_instrument.py  test_osc_client.py  update-sc-midi-extensions.sh
constraints/: time_freq.py
custom_controller/: Test.scd  YaeltexCustom.sc
data/: 1194.json  126-old-data.json  126.json  1288-old-data.json  1288.json  795.json  982.json  983-old-data.json  983.json  984-old-data.json  984.json  Ajustando_Bomba_de_Afinacion_Principal-new-data.json  Ajustando_Bomba_de_Afinacion_Principal.json  ArchiveWebScrapingDownload.py  WebScrapingDownload.py  download-test-data.sh
doc/: API-Documentation.html  Dev-Guidelines.md  Music-Emotion-Machine.md  Roadmap.md  Uso.md  update-api-doc.sh
docker/: Docker.md
emotion/: MusicEmotionMachine.py
examples/: Danzabilidad.ipynb  OSC_service.py  playmp3list_envelope.sc  plugin_usage.py
gradients/: __init__.py  descent.py  subproblem.py
helper/: Build_csv.py  WebScrapingDownload.py  convert-to-wav.py  download-test-data.sh  normalize.sh  remove_silence.sh  rename_script.sh
machine_learning/: SoundSimilarity.py  cache.py  cross_validation.py  quality.py
means/: README  y0.txt  y1.txt  y5.txt  y6.txt  y9.txt
mir/: MIRState.py  MirAnalysis.py
mirdbapi/: FreesoundDB.py
mock-webservice/: MockRedPanalWS.py  REST-API-Tests.py  mock-webservice.py  webservice.py
module/: docker.md  run_mir_analysis.py
pyo/: freeze.py
raspicultor/: MIDISpec.md  README.md  _jackdrc
(+282 files in other folders)
